# vicss

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml
artifacts/data/ade20k_150/: metadata.csv  split.csv
artifacts/data/pascal_context_59/: metadata.csv  split.csv
artifacts/data/pascal_voc_20/: split.csv
artifacts/models/retrieval/: databases.json
configs/data/: ade20k_150.yaml  pascal_context_59.yaml  pascal_voc_20.yaml
configs/experiment/baseline/: llava_caption.yaml  llava_list.yaml  llava_single.yaml
configs/experiment/method/: cased.yaml  dense_cased.yaml
configs/hydra/: default.yaml
configs/model/: cased.yaml  clip.yaml  dense_cased.yaml  vocabulary_free_clip.yaml
configs/model/detector/: fast_sam.yaml  grid.yaml
configs/model/extractor/: patch.yaml
configs/model/vocabulary/: blip2_vqa.yaml  llava.yaml
configs/paths/: default.yaml
src/: eval.py  train.py
src/data/: __init__.py  _base.py  _utils.py  ade20k_150.py  caltech101.py  dtd.py  eurosat.py  fgvc_aircraft.py  flowers102.py  food101.py  imagenet.py  oxford_pets.py  pascal_context_59.py  pascal_voc_20.py  stanford_cars.py  sun397.py  ucf101.py
src/data/components/: datasets.py  transforms.py
src/models/: __init__.py  _base.py  _mixins.py  cased.py  clip.py  dense_cased.py  vocabulary_free_clip.py
src/models/components/: detection.py  extraction.py  retrieval.py  vocabularies.py
src/models/components/metrics/: __init__.py  aggregation.py  classification.py  segmentation.py  text.py
src/models/components/nn/: __init__.py  classifiers.py
src/utils/: __init__.py  decorators.py  extras.py  instantiators.py  lightning_utils.py  logging_utils.py  misc_utils.py  rich_utils.py
tests/: conftest.py  test_configs.py  test_data.py
tests/helpers/: run_if.py
