[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vicss"
version = "1.1.0"
description = "Vocabulary-free Image Classification and Semantic Segmentation"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {file = "LICENCE"}
authors = [{name = "Alessandro Conti", email = "alessandro.conti.97@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    # --------- pytorch --------- #
    "torch == 2.1.2",
    "torchvision == 0.16.2",
    "lightning == 2.1.3",
    "torchmetrics == 1.3.0.post0",
    # ---------- hydra ---------- #
    "hydra-core == 1.3.2",
    "hydra-colorlog == 1.2.0",
    # --------- loggers --------- #
    "wandb == 0.16.2",
    # ------ models ------ #
    "open_clip_torch == 2.24.0",
    "transformers == 4.37.2",
    # ---------- others --------- #
    "faiss-cpu == 1.7.4",
    "flair == 0.13.1",
    "gdown == 5.0.1",
    "inflect == 7.0.0",
    "kaggle == 1.6.3",
    "lovely-tensors == 0.1.15",
    "nltk == 3.8.1",
    "pandas == 2.2.0",
    "pyarrow == 15.0.0",
    "rootutils == 1.0.7",
    "rich == 13.7.0",
    "scikit-learn == 1.4.0",
    "scipy == 1.12.0",
    "ultralytics == 8.1.8"
]

[project.optional-dependencies]
dev = [
    "black == 24.1.1",
    "flake8 == 7.0.0",
    "Flake8-pyproject == 1.2.3",
    "ipython == 8.20.0",
    "isort == 5.13.2",
    "pre-commit == 3.6.0",
    "pytype == 2023.10.31",
]
test = [
    "pytest == 7.4.4",
    "sh == 2.0.6",
]

[project.urls]
source = "https://github.com/altndrr/vicss"

[tool.black]
line_length = 99

[tool.flake8]
count = true
ignore = ["E402"]
per-file-ignores = ["__init__.py:F401"]
exclude = ["data/*","logs/*"]
max-line-length = 99

[tool.interrogate]
fail-under = 100
ignore-init-module = true
ignore-init-method = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true

[tool.flit.module]
name = "src"

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
  "train: tests that train models",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
